--- a/style.css
+++ b/style.css
@@ -220,12 +220,12 @@ footer {
         /* 📍 Свойства для расположения элементов и отступа между ними */
         flex-direction: column-reverse;
         align-items: flex-start;
-        row-gap: 60px;
+        gap: 60px;
     }
 
     .main-image {
         /* 📍 Максимальная ширина для главного изображения в % */
-        max-width: 728px;
+        max-width: 100%;
         width: 100%;
     }
 
@@ -253,13 +253,13 @@ footer {
 @media screen and (max-width: 576px) {
     .main-section {
         /* 📍 Внутренние отступы сверху и снизу */
-        padding: 30px 20px 60px;
+        padding: 30px 0px 60px;
         min-height: auto;
     }
 
     .main-section .wrapper {
         /* 📍 Отступ между изображением и блоком с текстом */
-        row-gap: 40px;
+        gap: 40px;
     }
 
     .main-title {
@@ -272,7 +272,7 @@ footer {
     .about-section .wrapper,
     .info-wrapper {
         /* 📍 Отступ между изображением и блоком с текстом */
-        row-gap: 50px;
+        gap: 50px 60px;
     }
 
     .line {
