--- a/style.css
+++ b/style.css
@@ -145,6 +145,8 @@ select:hover,
 form {
     margin-bottom: 40px;
     /* 📍 Свойства для расположения элементов (инпута и кнопки) и отступа между ними */
+    display: flex;
+    gap: 10px;
 }
 
 .text-field {
@@ -272,14 +274,10 @@ footer {
     .about-section .wrapper,
     .info-wrapper {
         /* 📍 Отступ между изображением и блоком с текстом */
-        gap: 50px 60px;
+        gap: 50px;
     }
 
-    .line {
+    /* .line {
         margin: 50px 0;
-    }
-
-    .text-field {
-        margin-right: 10px;
-    }
+    } */
 }
